# arbitrix-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-test.yml  release.yml
docs/: configuration.md  contributing.md  costs.md  data-format.md  getting-started.md  index.md  strategies.md
docs/api/: backtest.md  costs.md  data.md  strategies.md
docs/risk/: position-sizing.md
docs/symbols/: futures.md
examples/: 01_quickstart.py  02_cost_overrides.py  03_custom_cost_model.py
examples/cost_models/: zero_slippage.py
examples/data/: eurusd_h1_sample.csv
src/arbitrix_core/: __init__.py  portfolio.py  strategy_parameters.py  time_utils.py  trading.py  types.py
src/arbitrix_core/backtest/: __init__.py  bar_view.py  config.py  engine.py  fast_loop.py
src/arbitrix_core/costs/: __init__.py  base.py  registry.py  spread_runtime.py
src/arbitrix_core/costs/models/: __init__.py  default.py  parameterized.py
src/arbitrix_core/data/: __init__.py  loader.py
src/arbitrix_core/margin/: __init__.py  models.py  protocol.py  registry.py
src/arbitrix_core/strategies/: __init__.py  base.py
src/arbitrix_core/symbols/: asset_class.py  context.py
tests/: conftest.py  test_data_loader.py  test_examples.py  test_public_api.py
tests/backtest/: test_bar_observer_hook.py  test_bar_view.py
